# aigc_toolkit

./: .gitignore  GEMINI.md  Readme.md  SKILL.md  pyproject.toml
skills/ai-video/: SKILL.md
skills/stt/: SKILL.md
skills/tts/: SKILL.md
src/aigc_toolkit/: burn_subtitles.py  generate_image.py  generate_video.py  stt.py  tts.py  voice_extract.py
src/test/: test_voice_extract.py
src/tts/: tts.py
